Wrapping up latest round of significant style refinement - not a polished "production" ready implementation of design and style, but pretty close - still need to further review components and possibly apply another round of refinement - latest changes:   - Header - implemented mobile nav menu with hamburger menu icon   - Fixed Dark Theme configuration for mantine to Light   - refined several colors

--- a/src/components/Storyblok/NavItem/NavItem.module.scss
+++ b/src/components/Storyblok/NavItem/NavItem.module.scss
@@ -8,7 +8,8 @@
 }
 
 .navItem:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  font-weight: 700;
 }
 
 .placeholder {
